# webgateway

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  PRD-addendum-2.md  PRD-addendum-3.md  PRD-addendum-4.md  PRD-addendum-5.md  PRD-addendum.md  PRD.md  README.md  config.local.yaml  config.selfhosted.yaml  config.test.yaml  config.yaml  docker-compose.firecrawl.yml  docker-compose.invisible-playwright.yml  docker-compose.local.yml  docker-compose.selfhosted.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  searxng-limiter.toml  searxng-settings.yml
.github/workflows/: deploy-docs.yml  docker-publish.yml
docs-src/: mkdocs.yml
docs-src/docs/: index.md
docs/adr/: 001-dlp-regex-only.md
scripts/: ensure-gateway.sh  fetch_injection_model.py  generate_provider_pages.py
services/cdp-chrome/: Dockerfile  server.py
services/invisible-playwright/: Dockerfile  server.py
src/serp_llm/: __init__.py  audit.py  auth.py  config.py  judge.py  main.py  proxy.py  resource_manager.py  schemas.py  service.py  telemetry.py
src/webgateway/: __init__.py  admin_session.py  audit.py  auth.py  config.py  judge.py  key_store.py  main.py  proxy.py  resource_manager.py  schemas.py  service.py
tests/: __init__.py  judge_live.py
tests/integration/: conftest.py  searxng_settings.yml  test_brave.py  test_cache.py  test_context7.py  test_crawl4ai.py  test_devdocs.py  test_dlp.py  test_duckduckgo.py  test_exa.py  test_extract_jina.py  test_firecrawl.py  test_firecrawl_selfhosted.py  test_flaresolverr.py  test_perplexity.py  (+6 more)
(+231 files in other folders)
