[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serp-llm"
version = "0.1.0"
description = "Self-hosted, policy-driven web search and extraction gateway for AI agents"

requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx[socks]>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "cryptography>=44.0.0",
    "bcrypt>=4.2.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.2.0",
    "mcp>=1.27,<2",
    "trafilatura>=2.1.0",
    "babel>=2.18.0",
    "readability-lxml>=0.8.4",
    "markdownify>=1.2.0",
    "html2text>=2025.0.0",
    "aiosmtplib>=3.0.0",
    "ddgs>=9.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]
injection = [
    "onnxruntime>=1.18.0",
    "transformers>=4.44.0",
    "numpy>=1.26.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/serp_llm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["serp_llm"]
